[package]
name = "glowing-happiness"
version = "0.1.0"
edition = "2021"
authors = ["Darius Murawski <darius@murawski.blog>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
rayon = "1.5.3"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[[bin]]
name = "glowing-happiness"
path = "src/main.rs"